Getting Rid of Warnings for View